[package]
name = "keylogger-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.0"
hidapi-rusb = "1.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = "0.4"
mac_address = "1.1.3"
ureq = "2.4.0"
json = "0.12.4"